# mobile-operator-billing

./: Makefile.am  README  ReadMe.txt  account.cpp  account.h  configure.ac  luxoft.sln  luxoft.vcxproj  luxoft.vcxproj.filters  main.cpp  money.h  phone.cpp  phone.h  service_provider.cpp  service_provider.h  stdafx.h
