AM_CXXFLAGS = std=c++11 -O2
AM_LDFLAGS = -lm

bin_PROGRAMS = example
example_SOURCES = account.cpp \
									phone.cpp   \
									service_provider.h \
									stdafx.h \
									account.h \
									main.cpp \
									money.h \
									phone.h \
									service_provider.cpp \
									stdafx.cpp \
									targetver.h
